fix button letter spacing

--- a/components/Button/styles.styl
+++ b/components/Button/styles.styl
@@ -136,6 +136,7 @@
   **/
   &.size_small
     height: 3.2rem
+    letter-spacing: 0
     width: 9rem
     
     .label
